CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pthread")

#[[
INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SRC_LIST)
ADD_EXECUTABLE(ReactorServer ${SRC_LIST})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(ReactorServer ${CMAKE_THREAD_LIBS_INIT})]]

INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SRC_LIST)
ADD_EXECUTABLE(T_LoopEpollChannel ${SRC_LIST})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(T_LoopEpollChannel ${CMAKE_THREAD_LIBS_INIT})
