CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -pthread")

INCLUDE_DIRECTORIES(../inlcude)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(ReactorServer ${SRC_LIST})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(ReactorServer ${CMAKE_THREAD_LIBS_INIT})