CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -pthread")

INCLUDE_DIRECTORIES(../inlcude)
AUX_SOURCE_DIRECTORY(. CLIENT_SRC)
ADD_EXECUTABLE(ReactorTest ${CLIENT_SRC})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(ReactorTest ${CMAKE_THREAD_LIBS_INIT})